k8s/aws/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-demo
  namespace: platform-demo
  labels:
    app: platform-demo
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: platform-demo
  template:
    metadata:
      labels:
        app: platform-demo
    spec:
      containers:
        - name: platform-demo
          image: 609717032121.dkr.ecr.us-east-1.amazonaws.com/platform-demo:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
